dnl switch off caching, since that leads to insurmountable trouble if
dnl you call ./configure subsequently on different systems without
dnl clearing the cache 
define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl

AC_INIT(qt2kdoc)

AC_DEFUN(AC_FIND_PERL,
[
AC_MSG_CHECKING(for perl 5 or greater)
if $srcdir/findperl; then
	$1=`cat perlbin`
	echo $$1
else
	echo "Couldn't find perl 5 or later. kdoc will not run."
	exit 1
fi	
])

AC_DEFUN(AC_KDOC_VERSION,
[
AC_MSG_CHECKING(kdoc version)
$1=`cat $srcdir/Version | sed 's#Revision##g' | tr -d '\$:'`
echo $$1
])

AC_PROG_INSTALL
AC_FIND_PERL(perl)
AC_SUBST(perl)
AC_KDOC_VERSION(Version)
AC_SUBST(Version)

mandir='${prefix}/man/man1'
docdir='${prefix}/doc/kdoc'

AC_SUBST(mandir)
AC_SUBST(docdir)


AC_OUTPUT(Makefile doc/Makefile)
